Improve json output lint test for use jq format

--- a/tests/fixtures/html.raw.html
+++ b/tests/fixtures/html.raw.html
@@ -17,7 +17,7 @@
     // 这个script也会转换
     // 按照javascript的方式来处理
     const a = "hello你好";
-        /**
+    /**
      * 多行comment测试
      * 多行第2行
      */
@@ -40,6 +40,7 @@
         在本教程中，我们将使用Rust的npm包构建工具<code>wasm-pack</code>来构建一个npm包。这个包只包含WebAssembly和JavaScript代码，以便包的用户无需安装Rust就能使用。他们甚至不需要知道这里包含WebAssembly！
       </p>
     </div>
+    <strong>小贴士: </strong>
   </div>
 </article>
 
