example: Improve example for show lint result by use annotators in Monaco Editor

--- a/example/index.html
+++ b/example/index.html
@@ -36,8 +36,8 @@
     }
 
     .editor-wraper {
-      width: 600px;
-      height: 600px;
+      width: 100%;
+      height: 640px;
       margin-bottom: 10px;
       border: 1px solid #c0c0c0;
     }
@@ -92,11 +92,10 @@
     <div class="flex items-center space-x-4">
       <div id="input" class="editor-wraper">
       </div>
-      <div class="editor-wraper preview"></div>
     </div>
     <div>
-      <button id="btn">Format</button> or
-      <button id="btn-lint">Lint</button>
+      <button id="btn">Format</button> /
+      <button id="btnReset">Reset</button>
       <span class="message"></span>
     </div>
   </div>
