--- a/example/index.html
+++ b/example/index.html
@@ -78,7 +78,7 @@
 </head>
 
 <body>
-  <script src="./index.js"></script>
+  <script type="module" src="/src/index.tsx"></script>
   <h1>AutoCorrect</h1>
   <p>A linter and formatter for help you improve copywriting, to correct spaces, punctuations between CJK (Chinese,
     Japanese, Korean).</p>
