Update website npm version

--- a/autocorrect-website/index.html
+++ b/autocorrect-website/index.html
@@ -67,7 +67,7 @@
       <div class="codeblock-wrap">
         <pre class="codeblock"><span>brew install autocorrect</span></pre>
         <div class="text-gray-600">Or just install via this:</div>
-        <pre class="codeblock"><span>curl -sSL https://git.io/JcGER | bash</span></pre>
+        <pre class="codeblock"><span>curl -sSL https://git.io/JcGER | sh</span></pre>
       </div>
       <div class="intro">
         <p>Like Eslint, Rubocop, Gofmt ..., AutoCorrect allow us to checking soure code, and output as colorized diff
