Rewrite Edtior by use React. And use bun instead of yarn.

--- a/autocorrect-website/index.html
+++ b/autocorrect-website/index.html
@@ -89,17 +89,7 @@
     </div>
 
     <h2 id="try" class="mb-6 text-2xl">Try AutoCorrect</h2>
-    <div class="flex items-center justify-between mx-auto mb-4">
-      <select class="min-w-[250px]" id="filetype"></select>
-    </div>
-    <div class="editor-wraper"></div>
-    <div class="flex flex-wrap justify-between mb-6 space-y-6 lg:flex-nowrap lg:space-x-6 lg:space-y-0">
-      <div>
-        <button id="btn">Format</button> <span class="mx-2">or</span>
-        <button id="btnReset">Reset</button>
-        <span class="message"></span>
-      </div>
-    </div>
+    <div id="app-editor"></div>
 </body>
 
 </html>
