website: Fix CSS style.

--- a/autocorrect-website/index.html
+++ b/autocorrect-website/index.html
@@ -6,6 +6,8 @@
   <title>AutoCorrect</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="manifest" href="/manifest.webmanifest">
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#030712">
   <link rel="alternate icon" type="image/png"
     href="https://user-images.githubusercontent.com/5518/194691346-13856309-266b-4bf6-b505-5a8b15d0c02e.png" />
 </head>
