website: Fix reponstive style.

--- a/autocorrect-website/index.html
+++ b/autocorrect-website/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>AutoCorrect</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="manifest" href="/manifest.webmanifest">
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF">
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#030712">
