--- a/autocorrect-website/index.html
+++ b/autocorrect-website/index.html
@@ -46,8 +46,8 @@
           <pre class="codeblock"><span>curl -sSL https://git.io/JcGER | sh</span></pre>
         </div>
         <div class="intro">
-          <p>Like Eslint, Rubocop, Gofmt ..., AutoCorrect allow us to checking soure code, and output as colorized diff
-            with corrected suggest. You can intergrating to CI (GitLab CI, GitHub Action, Travis CI....) for use to
+          <p>Like Eslint, Rubocop, Gofmt ..., AutoCorrect allow us to checking source code, and output as colorized diff
+            with corrected suggest. You can integrating to CI (GitLab CI, GitHub Action, Travis CI....) for use to
             checking the contents in source code. Recognize the file name, and find out the strings and the comment
             part.
           </p>
